force-app/main/default/objects/Services_SOW_Settings__c/fields/OAuth_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>OAuth_Access_Token__c</fullName>
    <label>OAuth Access Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>