force-app/main/default/objects/Services_SOW_Settings__c/fields/OAuth_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>OAuth_Client_Secret__c</fullName>
    <label>OAuth Client Secret</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>