force-app/main/default/objects/Services_SOW_Settings__c/fields/OAuth_Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>OAuth_Refresh_Token__c</fullName>
    <label>OAuth Refresh Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>