force-app/main/default/objects/Services_SOW_Settings__c/fields/Product_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Product_Mapping__c</fullName>
    <label>Product_Mapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>